--- a/public/desktop.ini
+++ b/public/desktop.ini
@@ -12,3 +12,25 @@ ciscolog.png=@ciscolog,0
 fortinetlogo.jpeg=@fortinetlogo,0
 fortineticon.jpeg=@fortineticon,0
 Kasperskylogo.jpeg=@Kasperskylogo,0
+macbook.jpeg=@macbook,0
+delllapot.jpeg=@delllapot,0
+hplaptop.jpeg=@hplaptop,0
+lenovopc.jpeg=@lenovopc,0
+macbookpro.jpeg=@macbookpro,0
+dellpc.jpeg=@dellpc,0
+dellserver.jpeg=@dellserver,0
+dellserver=@dellserver,0
+ciscoswitch.jpeg=@ciscoswitch,0
+switch2.jpeg=@switch2,0
+switch1.jpeg=@switch1,0
+switch3.jpeg=@switch3,0
+router1.jpeg=@router1,0
+router2.jpeg=@router2,0
+router2.png=@router2,0
+router4.jpeg=@router4,0
+router5.jpeg=@router5,0
+server1.jpeg=@server1,0
+server2.jpeg=@server2,0
+server2.jpg=@server2,0
+server3.jpeg=@server3,0
+server4.jpeg=@server4,0
